--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
     color: #3060aa;
     position: relative;
 }
-.select-bg {
+.select-bg, .select-bg:focus {
     background-color: #eff5ff;
     color: #3060aa;
 }
