--- a/style.css
+++ b/style.css
@@ -120,3 +120,59 @@ body {
     opacity: 0.5;
     z-index: 1;
 }
+
+.summary-card {
+    background-color: white;
+    padding: 10px;
+    margin: 0 auto 25px;
+    margin-top: 15px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.summary-card-body {
+    padding: 2rem;
+}
+
+.uploaded-claim {
+    background: #EAF1FD 0% 0% no-repeat padding-box;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.uploaded-claim-header {
+    letter-spacing: 0px;
+    color: #4E8DEF;
+}
+
+.uploaded-claim-body {
+    letter-spacing: 0px;
+    color: #3060AA;
+}
+
+.not-uploaded-claim {
+    background: #FFE6E6 0% 0% no-repeat padding-box;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.not-uploaded-claim-header {
+    letter-spacing: 0px;
+    color: #E02A2A;
+}
+
+.not-uploaded-claim-body {
+    letter-spacing: 0px;
+    color: #BA1111;
+}
+
+.vertical-line{
+    border-left: 1px solid black;
+    margin: 10px 0px;
+}
