--- a/style.css
+++ b/style.css
@@ -1,64 +1,106 @@
-body {
-    background-color: #e8e8e8
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('fonts/Helvetica-R/HelveticaNeue.eot');
+    src: url('fonts/Helvetica-R/HelveticaNeue.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Helvetica-R/HelveticaNeue.woff') format('woff'),
+        url('fonts/Helvetica-R/HelveticaNeue.ttf') format('truetype'),
+        url('fonts/Helvetica-R/HelveticaNeue.svg#HelveticaNeue') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
-
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('fonts/Helvetica-R/HelveticaNeue-Bold.woff') format('woff'),
+        url('fonts/Helvetica-R/HelveticaNeue-Bold.ttf') format('truetype'),
+        url('fonts/Helvetica-R/HelveticaNeue-Bold.svg#HelveticaNeue-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+body {  background-color: #e8e8e8; font-family: 'Helvetica Neue';}
+a:hover .normal-img, button:hover .normal-img{display: none;}
+a:hover .hover-img, button:hover .hover-img{display: block;}
+body hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 0;
+    border-top: 1px solid rgb(112 112 112 / 0.22);
+}
 .card {
     background-color: #F7F7F7;
     /* just in case there no content*/
-    padding: 20px 25px 30px;
-    margin: 0 auto 25px;
-    margin-top: 50px;
+    padding: 35px 41px 45px;
+    margin: 0;
     /* shadows and rounded borders */
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 0;
+    width: 100%;
+}
+.card-wrap{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.card-container {
+    max-width: 472px;
+    width: 100%;
+    min-height: calc(100% - (1.75rem * 2));
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 20px auto;
 }
 
-.card-container.card {
-    max-width: 450px;
-    padding: 40px 40px;
-}
-
-.card-body {
-    padding: 2rem;
-}
+.card-body { padding: 1.5rem;}
 
 .profile-img-card {
-    width: 30%;
-    height: 30%;
+    max-width: 179px;
+    width: 100%;
+    height: auto;
     margin: 0 auto 10px;
     display: block;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
+    margin-top: 40px;
 }
 
-.btn-signin {
+.btn-signin, .btn-primary {
     background-color: #3060aa;
     color: #fff;
+    font: normal normal normal 17px/20px Helvetica Neue;
+    padding: 10px;
+    border: 1px solid #3060AA;
+    border-radius: 5px;
 }
-.btn-signin:disabled{
-    opacity: 0.65;
-    background-color: #3060aa;
-    color: #fff;
-}
-.btn-primary:hover {
-    background-color: #3060aa;
-}
-
+.btn-signin:focus, .btn-primary:focus{ box-shadow: none;  outline: none;}
+.btn-signin:hover, .btn-primary:hover{ background-color: #fff; color: #3060aa;}
+.btn-signin:disabled, .btn-primary:disabled{ opacity: 0.65; background-color: #3060aa; color: #fff;}
 .errorArea {
-    margin-left: 10%;
-    width: 80%;
-    background-color: #EAEAEA;
-    border: 1px solid #AFAFAF;
+    width: 100%;
+    background-color: #ffecec;
+    border: 1px solid #ff3d3d;
     color: #ff3d3d;
     border-radius: 5px;
     padding: 10px;
+    text-transform: capitalize;
 }
-
+.errorArea p{
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+form .errorArea p{margin-bottom: 0;}
 .btn-logout {
     background: #89ABE3FF;
     color: black;
@@ -89,7 +131,7 @@ body {
     position: absolute;
     right: 5%;
 }
-
+.navbar-brand{margin-right: 0;}
 #upnotification {
     position: absolute;
     box-sizing: border-box;
@@ -123,15 +165,11 @@ body {
 
 .summary-card {
     background-color: white;
-    padding: 10px;
-    margin: 0 auto 25px;
-    margin-top: 15px;
+    padding: 10px 3px;
+    margin: 20px auto 25px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .summary-card-body {
@@ -176,3 +214,190 @@ body {
     border-left: 1px solid black;
     margin: 10px 0px;
 }
+
+.form-check-label{
+    font: normal normal normal 17px/20px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #7A7D83;
+    background: #F7F7F7;
+    padding: 6px 10px 6px 27px;
+    border-radius: 5px;
+    border: 1px solid #989CA3A6;
+    border-radius: 5px;
+    background: #fff;
+}
+form .form-group .custom-checkbox{
+    display: inline-block;
+    position: relative;
+    margin-bottom: 10px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    margin-right: 10px;
+    margin: 0;
+    padding: 0;
+    margin-right: 10px;
+}
+form .form-group .custom-checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: none;
+    outline: none;
+    margin: 0;
+}
+form .form-group .custom-checkbox .checkmark {
+    position: absolute;
+    top: 50%;
+    left: 6px;
+    height: 15px;
+    width: 15px;
+    background-color: #E6E6E6;
+    border-radius: 50%;
+    transform: translateY(-50%);
+}
+form .form-group .custom-checkbox:hover input ~ .checkmark {  background-color: #E6E6E6;}
+form .form-group .custom-checkbox input:checked ~ .checkmark {  background-color: #3060AA;}
+form .form-group .custom-checkbox input:checked ~ .form-check-label {
+    border: 1px solid #3060AA;
+    border-radius: 5px;
+    background: #f8f8ff;
+    color: #3060AA;
+}
+#version{
+    position: absolute;
+    left: 21px;
+    top: 20px;
+    font: normal normal normal 17px/20px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #000000;
+    margin: 0;
+}
+.form-group { margin-bottom: 21px;}
+.form-group .form-control {
+    padding: 13px 15px;
+    font: normal normal normal 17px/20px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #9F9F9F;
+    border-color: #C4C4C4;
+}
+.form-group .form-control:focus{
+    box-shadow: none;
+    outline: none;
+    border: 1px solid #3060AA
+}
+.user-action{
+    background:rgba(0, 0, 0, 0.1);
+    -o-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    padding: 10px 15px;
+    min-width: 201px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.user-action h3{
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    font-size: 10px;
+    line-height: 13px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
+.user-action span{
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    font-size: 9px;
+    line-height: 11px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+}
+.user-action .btn-logout{
+    width: 35px;
+    height: 35px;
+    background: rgb(17 53 110 / 0.53);
+    border: 0;
+    border-radius: 50%;
+    padding: 9px 9px;
+}
+.user-action .btn-logout img{ vertical-align: baseline;}
+.user-action .btn-logout:hover{background-color: #FFFFFF;}
+.normal-img{display: block;}
+.hover-img{display: none;}
+.card.database-config_page{ margin-top: 43px; padding: 30px;}
+.database-config { background: #FFFFFF; border-radius: 5px;}
+.inner-container{ padding: 0 13px;}
+.database-config_page form .form-group .custom-checkbox input{left: auto;}
+.extract_page{margin-top: 43px; padding: 0;}
+.extract_page .inner-container{padding: 0 19px;}
+.extract_page h5{
+    text-align: left;
+    font: normal normal normal 20px/24px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #3060AA;
+    padding: 12px 0 0;
+    margin: 0;
+}
+.extract_page .form-group .form-control{
+    text-align: left;
+    font: normal normal normal 16px/21px Roboto;
+    letter-spacing: 0px;
+    color: #3060AA;
+    padding: 9px 11px;
+    border: 1px solid #B9D3FC;
+    border-radius: 5px;
+    background: #EAF1FD;
+    cursor: pointer;
+    display: inline-block;
+}
+.extract_page .form-group { margin-bottom: 10px;}
+.extract_page .form-group label {
+    display: inline-block;
+    margin-bottom: 7px;
+    text-align: left;
+    font: normal normal normal 15px/20px Roboto;
+    letter-spacing: 0px;
+    color: #3C3C3C;
+    font-weight: 500;
+}
+.extract_page .form-group .extract-btn{display: flex;align-items: flex-end;}
+.extract_page form{margin-bottom: 20px; margin-top: 10px;}
+.extract_page .form-group .form-control.select-date{ height: 38px; position: relative;z-index: 1; background: transparent;}
+.extract_page .form-group input.select-date + .cal_icon{
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    right: 17px;
+    bottom: 12px;
+    line-height: 0;
+}
+.extract_page .form-group input[type="text"] + .cal_icon{display: block;}
+.extract_page .form-group input.select-date + .cal_icon img{max-width: 100%;}
+.extract_page .form-group input[type="date"] + .cal_icon{display: none;}
+.extract_page .form-group .extract-btn .btn-primary{font-size: 16px; line-height: 21px; padding: 7.5px 10px;width: 100%;}
+.date-row .col-sm-5{
+    -ms-flex: 0 0 37.666667%;
+    flex: 0 0 37.666667%;
+    max-width: 37.666667%;
+    background: #EAF1FD;
+}
+.date-row .col-sm-6{
+    -ms-flex: 0 0 48.33337%;
+    flex: 0 0 48.33337%;
+    max-width: 48.33337%;
+}
+.extract_page form  .row.date-row{margin-left: 0; margin-right: 0;}
+.extract_page .date-row .col-sm-5, .extract_page .date-row .col-sm-6, .extract_page .date-row .col{ margin: 0 5px;  padding: 0;}
