--- a/style.css
+++ b/style.css
@@ -119,25 +119,61 @@ form .errorArea p{margin-bottom: 0;}
 }
 .navbar-brand{margin-right: 0;}
 #upnotification {
-    position: absolute;
+    position: fixed;
     box-sizing: border-box;
     font-family: sans-serif;
-    background-color: #eaeaea;
+    background-color: rgb(23 22 22 / 83%);
     text-align: center;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
 }
 
 #notification {
-    position: fixed;
-    /* top: 250px;
-    left: 200px; */
-    top: 35%;
-    left: 24%;
-    max-width: 400px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    max-width: 350px;
+    width: 100%;
     z-index: 999;
-    padding: 20px;
+    padding: 13px 26px;
     border-radius: 5px;
     background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    transform: translate(-50%, -50%);
+}
+#upnotification #message{
+    font: normal normal normal 16px/20px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #707070;
+    text-align: center;
+    margin: 0 0 35px;
+}
+#upnotification .label-text{
+    text-align: left;
+    font: normal normal normal 12px/16px Helvetica Neue;
+    letter-spacing: 0px;
+    color: #3060AA;
+    padding-left: 10px;
+    margin: 0 0 35px;
+}
+#upnotification .btn-primary{
+    font: normal normal normal 12px/14px Helvetica Neue;
+    padding: 8px 13px;
+}
+#myProgress {
+    width: 100%;
+    background-color: rgb(48 96 170 / 31%);
+    margin: 0 0 35px;
+    border-radius: 5px;
+}
+#myBar {
+    width: 30%;
+    height: 6px;
+    border-radius: 5px;
+    background-color: #3060AA;
 }
 
 .hidden {
@@ -390,7 +426,6 @@ form .form-group .custom-checkbox input:checked ~ .form-check-label {
     font: normal normal normal 20px/24px Helvetica Neue;
     letter-spacing: 0px;
     color: #3060AA;
-    padding: 12px 0 0;
     margin: 0;
 }
 .extract_page .form-group .form-control{
