--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ form .form-group .custom-checkbox input:checked ~ .form-check-label {
     padding: 6px 12px;
     font: normal normal normal 11px/16px Roboto;
     letter-spacing: 0px;
-    color: #C6CAC6;
+    color: #787878;
     border: 0;
     background: #FAF7F7;
 }
