db config connection time out and spinner

--- a/style.css
+++ b/style.css
@@ -478,3 +478,17 @@ form .form-group .custom-checkbox input:checked ~ .form-check-label {
 .extract_page form  .row.date-row{margin-left: 0; margin-right: 0;}
 .extract_page .date-row .col-sm-5, .extract_page .date-row .col-sm-6, .extract_page .date-row .col{ margin: 0 5px;  padding: 0;}
 /* Extract Page CSS END */
+
+.alert{border:0;display: flex;padding: 12px;color: #565656;;border-radius: 6px;border-left:4px solid;box-shadow: 0 2px 4px rgba(0,0,0,0.24);}
+.alert>.icon{height: 20px;width: 20px;flex-basis: 20px;flex-grow: 0;flex-shrink:0;max-width: 20px;background: center no-repeat;background-size: 20px 20px;margin-right: 12px;}
+.alert-success{background:#e6f4e7;border-left-color:#80c683;}
+.alert-warning{background:#fff1db;border-left-color:#ffba53;}
+.alert-danger{background:#ffe7e0;border-left-color:#ff8761;}
+.alert-success>.icon{background-image: url('./images/ic-success.svg');}
+.alert-warning>.icon{background-image: url('./images/ic-warning.svg');}
+.alert-danger>.icon{background-image: url('./images/ic-error.svg');}
+.alert>.middle-block{padding-right: 12px;}
+.alert>.middle-block>h6{font-size: 16px;line-height: 22px;font-weight: 700;margin: 0;color:inherit;}
+.alert>.middle-block ul,.alert>.middle-block ul>li,.alert>.middle-block p{font-size: 14px;line-height: 20px;color:inherit;padding: 0;margin: 0;list-style: none;}
+.alert .close{height: 32px;width: 32px;background: url('./images/ic-close.svg') center no-repeat;background-size: 20px 20px;opacity: 0.4;transition: all 0.2s ease;border:0;padding: 0;margin: -8px -8px -8px auto;flex-basis: 32px;flex-grow: 0;flex-shrink: 0;max-width: 32px;position: static;}
+.alert .close:hover,.alert .close:focus,.alert .close:active{opacity: 0.72;}
