--- a/style.css
+++ b/style.css
@@ -474,9 +474,10 @@ form .form-group .custom-checkbox input:checked ~ .form-check-label {
     -ms-flex: 0 0 48.33337%;
     flex: 0 0 48.33337%;
     max-width: 48.33337%;
+    background: #EAF1FD;
 }
 .extract_page form  .row.date-row{margin-left: 0; margin-right: 0;}
-.extract_page .date-row .col-sm-5, .extract_page .date-row .col-sm-6, .extract_page .date-row .col{ margin: 0 5px;  padding: 0;}
+.extract_page .date-row .col-sm-5, .extract_page .date-row .col-sm-6, .extract_page .date-row .col-sm-8, .extract_page .date-row .col{ margin: 0 5px;  padding: 0;}
 /* Extract Page CSS END */
 
 .alert{border:0;display: flex;padding: 12px;color: #565656;;border-radius: 6px;border-left:4px solid;box-shadow: 0 2px 4px rgba(0,0,0,0.24);}
